--- a/index.html
+++ b/index.html
@@ -35,6 +35,9 @@
 
         <section id="about">
             <h2>About Me</h2>
+            <div class="about-content"></div>
+            <img src="images/profile.jpeg" alt="MD. Sameer Iqbal Chowdhury" class="profile-image">
+            <div class="about-text">
             <p>As someone with a deep curiosity about the nature of automated and industrial systems, I have taken up and completed many projects involving a wide array of sensors, actuation systems, microcontrollers, and single-board computers. I have reasonable experience with IoT-based systems and a wide variety of sensors.</p>
             <p>I am particularly experienced in using and interfacing water quality sensors to measure Electrical Conductivity (EC) and pH, which I acquired from working on my final year project. I am also profoundly inquisitive about Industrial IoT (IIoT) and its applications in today's growing and interconnected industrial automation landscape.</p>
             <p>With hands-on experience in Programmable Logic Controllers (PLCs) from my coursework and FESTO Didactic Training, I am well-equipped to tackle challenges in industrial automation. My extensive experience in technical writing from academic research papers gives me an edge in preparing and maintaining technical documentation.</p>
