--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MD. Sameer Iqbal Chowdhury - Robotics and Mechatronics Engineer</title>
+    <title>MD. Sameer Iqbal Chowdhury</title>
     <meta name="description" content="Portfolio of MD. Sameer Iqbal Chowdhury, Robotics and Mechatronics Engineer specializing in IoT and industrial automation.">
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
@@ -34,7 +34,7 @@
     <main>
         <section id="home">
             <h1>MD. Sameer Iqbal Chowdhury</h1>
-            <p class="tagline">Robotics and Mechatronics Engineer | IoT Enthusiast | Research Assistant</p>
+            <p class="tagline">Robotics and Mechatronics Engineering Grad | IoT Enthusiast | Aspiring Researcher</p>
             <div class="cta-buttons">
                 <a href="#contact" class="btn primary">Contact Me</a>
                 <a href="#projects" class="btn secondary">View Projects</a>
