--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
             <div class="cta-buttons">
                 <a href="#contact" class="btn primary">Contact Me</a>
                 <a href="#projects" class="btn secondary">View Projects</a>
+                <a href="#publications" class="btn secondary">View Publications</a>
             </div>
         </section>
 
