--- a/New folder/index.html
+++ b/New folder/index.html
@@ -3,13 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MD. Sameer Iqbal Chowdhury - Robotics and Mechatronics Engineer</title>
+    <title>MD. Sameer Iqbal Chowdhury</title>
+    <meta name="description" content="Portfolio of MD. Sameer Iqbal Chowdhury, Robotics and Mechatronics Engineer specializing in IoT and industrial automation.">
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
-    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
 </head>
 <body>
+    <button id="theme-toggle" class="theme-toggle">
+        <i class="fas fa-moon"></i>
+        <i class="fas fa-sun"></i>
+    </button>
+
     <header>
         <nav>
             <ul>
@@ -21,19 +26,13 @@
                 <li><a href="#publications">Publications</a></li>
                 <li><a href="#projects">Projects</a></li>
                 <li><a href="#education">Education</a></li>
-                <li><a href="#awards">Awards</a></li>
                 <li><a href="#contact">Contact</a></li>
             </ul>
         </nav>
     </header>
 
-    <button id="theme-toggle" class="theme-toggle">
-        <i class="fas fa-sun"></i>
-        <i class="fas fa-moon"></i>
-    </button>
-
     <main>
-        <section id="home" class="section">
+        <section id="home">
             <h1>MD. Sameer Iqbal Chowdhury</h1>
             <p class="tagline">Robotics and Mechatronics Engineering Grad | IoT Enthusiast | Aspiring Researcher</p>
             <div class="cta-buttons">
@@ -43,7 +42,7 @@
             </div>
         </section>
 
-        <section id="about" class="section">
+        <section id="about">
             <h2>About Me</h2>
             <div class="about-content">
                 <img src="images/profile.jpeg" alt="MD. Sameer Iqbal Chowdhury" class="profile-image">
@@ -55,7 +54,7 @@
             </div>
         </section>
 
-        <section id="skills" class="section">
+        <section id="skills">
             <h2>Skills</h2>
             <div class="skills-container">
                 <div class="skill-category">
@@ -100,7 +99,7 @@
             </div>
         </section>
 
-        <section id="experience" class="section">
+        <section id="experience">
             <h2>Professional Experience</h2>
             <div class="experience-item">
                 <h3>Research Assistant</h3>
@@ -115,7 +114,7 @@
             </div>
         </section>
 
-        <section id="research-interests" class="section">
+        <section id="research-interests">
             <h2>Research Interests</h2>
             <ul>
                 <li>Internet of Things (IoT)</li>
@@ -125,7 +124,7 @@
             </ul>
         </section>
 
-        <section id="publications" class="section">
+        <section id="publications">
             <h2>Publications</h2>
             <div class="publication-item">
                 <h3>Exploring the Efficacy of NAO Robot as a Language Instructor</h3>
@@ -137,7 +136,7 @@
             </div>
         </section>
 
-        <section id="projects" class="section">
+        <section id="projects">
             <h2>Projects</h2>
             <div class="project-item">
                 <h3>IoT-enabled Scalable Closed Hydroponics System with Smart Parameter Control</h3>
@@ -189,7 +188,7 @@
             </div>
         </section>
 
-        <section id="education" class="section">
+        <section id="education">
             <h2>Education</h2>
             <div class="education-item">
                 <h3>B.Sc. in Robotics and Mechatronics Engineering</h3>
@@ -209,48 +208,20 @@
             </div>
         </section>
 
-        <section id="awards" class="section">
-            <h2>Awards</h2>
-            <div class="award-item">
-                <h3>ICT Innovation Fund Grant</h3>
-                <p class="award-details">ICT Division, Ministry of Posts, Telecommunications and Information Technology, People's Republic of Bangladesh | 2023</p>
-                <p>Awarded during the Fiscal Year 2022-2023 for the project titled "Design of an IoT-enabled Scalable Closed Hydroponics System with Smart Parameter Control"</p>
-            </div>
-            <div class="award-item">
-                <h3>The Daily Star Award for A Level</h3>
-                <p class="award-details">The Daily Star | 2018</p>
-                <p>Awarded for the May/June 2018 session for obtaining 3 As or better in IGCSE Advanced Level under Cambridge International Examinations</p>
-            </div>
-            <div class="award-item">
-                <h3>Highest Mark in the Country</h3>
-                <p class="award-details">Cambridge International Examinations | 2018</p>
-                <p>Awarded for the May/June 2017 session for obtaining the Highest Mark (96%) in Advanced Subsidiary Level Economics</p>
-            </div>
-            <div class="award-item">
-                <h3>The Daily Star Award for O Level</h3>
-                <p class="award-details">The Daily Star | 2016</p>
-                <p>Cambridge International Examinations
-                    Awarded for the May/June 2016 session for obtaining 6 As or better in IGCSE Ordinary Level under Cambridge International Examinations</p>
-            </div>
-        </section>
-
-        <section id="contact" class="section">
+        <section id="contact">
             <h2>Contact Me</h2>
             <div class="contact-info">
-                <p>Email: sameer.iqbal2171@gmail.com</p>
-                <p>Phone: (+88)01746224751</p>
+                <p>Email: <a href="mailto:sameer.iqbal2171@gmail.com">sameer.iqbal2171@gmail.com</a></p>
+                <p>Phone: +8801746224751</p>
                 <p>Location: Dhaka, Bangladesh</p>
             </div>
             <div class="social-links">
-                <a href="https://www.linkedin.com/in/msichowdhury/" target="_blank" rel="noopener noreferrer"><i class="fab fa-linkedin"></i> LinkedIn</a>
-                <a href="https://github.com/MSIChowdhury" target="_blank" rel="noopener noreferrer"><i class="fab fa-github"></i> GitHub</a>
-                <!-- <a href="https://scholar.google.com/citations?user=YOUR_GOOGLE_SCHOLAR_ID" target="_blank" rel="noopener noreferrer"><i class="fas fa-graduation-cap"></i> Google Scholar</a> -->
-                <a href="https://x.com/RavenXeen" target="_blank" rel="noopener noreferrer" class="x-link">
-                    <svg viewBox="0 0 24 24" aria-hidden="true" class="x-logo" width="20" height="20">
-                      <path fill="currentColor" d="M18.244 2.25h3.308l-7.227 8.26 8.502 11.24H16.17l-5.214-6.817L4.99 21.75H1.68l7.73-8.835L1.254 2.25H8.08l4.713 6.231zm-1.161 17.52h1.833L7.084 4.126H5.117z"></path>
-                    </svg>
-                    (Twitter)
-                  </a>
+                <a href="https://www.linkedin.com/in/msichowdhury/" target="_blank" rel="noopener noreferrer">
+                    <i class="fab fa-linkedin"></i> LinkedIn
+                </a>
+                <a href="https://github.com/MSIChowdhury" target="_blank" rel="noopener noreferrer">
+                    <i class="fab fa-github"></i> GitHub
+                </a>
             </div>
         </section>
     </main>
