--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
             <div class="award-item">
                 <h3>Highest Mark in the Country</h3>
                 <p class="award-details">Cambridge International Examinations | 2018</p>
-                <p>Awarded for the May/June 2017 session for obtaining the Highest Mark (96%) in Advanced Subsidiary Level Economics</p>
+                <p>Awarded for the May/June 2017 session for obtaining the Highest Mark in Bangladesh (96%) in Advanced Subsidiary Level Economics</p>
             </div>
             <div class="award-item">
                 <h3>The Daily Star Award for O Level</h3>
