--- a/index.html
+++ b/index.html
@@ -144,15 +144,15 @@
                 <p class="project-details">Undergraduate Thesis Project | January 2023 - January 2024</p>
                 <div class="project-images">
                     <figure class="project-figure">
-                        <img src="/images/hydroponics-project1.JPG" class="project-image lazy" data-src="images/hydroponics-project1.jpg" alt="IoT Hydroponics System 1">
+                        <img src="images/hydroponics-project1.JPG" class="project-image lazy" data-src="images/hydroponics-project1.jpg" alt="IoT Hydroponics System 1">
                         <figcaption>Overall system setup before the first experiment</figcaption>
                     </figure>
                     <figure class="project-figure">
-                        <img src="/images/hydroponics-project2.png" class="project-image lazy" data-src="images/hydroponics-project2.png" alt="IoT Hydroponics System 2">
+                        <img src="images/hydroponics-project2.png" class="project-image lazy" data-src="images/hydroponics-project2.png" alt="IoT Hydroponics System 2">
                         <figcaption>Full system block diagram</figcaption>
                     </figure>
                     <figure class="project-figure">
-                        <img src="/images/hydroponics-project3.jpg" class="project-image lazy" data-src="images/hydroponics-project3.jpg" alt="IoT Hydroponics System 3">
+                        <img src="images/hydroponics-project3.jpg" class="project-image lazy" data-src="images/hydroponics-project3.jpg" alt="IoT Hydroponics System 3">
                         <figcaption>Lettuce grown inside the system</figcaption>
                     </figure>
                 </div>
@@ -172,11 +172,11 @@
                 <p class="project-details">Self-funded Lab Project | October 2022 - November 2022</p>
                 <div class="project-images">
                     <figure class="project-figure">
-                        <img src="/images/2DOF.JPG" class="project-image lazy" data-src="images/2DOF.jpg" alt="2 DOF Crawler 1">
+                        <img src="images/2DOF.JPG" class="project-image lazy" data-src="images/2DOF.jpg" alt="2 DOF Crawler 1">
                         <figcaption>Front view of the 2 DOF single claw crawler bot</figcaption>
                     </figure>
                     <figure class="project-figure">
-                        <img src="/images/2DOFTOP.JPG" class="project-image lazy" data-src="images/2DOFTOP.JPG" alt="2 DOF Crawler 2">
+                        <img src="images/2DOFTOP.JPG" class="project-image lazy" data-src="images/2DOFTOP.JPG" alt="2 DOF Crawler 2">
                         <figcaption>Top view of the 2 DOF single claw crawler bot</figcaption>
                     </figure>
                 </div>
