--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
             </div>
             <div class="project-item">
                 <h3>2 DOF, Single Claw Crawler Bot using Q-learning</h3>
-                <p class="project-details">Self-funded Lab Project | October 2022 - November 2022</p>
+                <p class="project-details">Self-funded Lab Project under RME 3211: Intelligent Systems and Robots Lab | October 2022 - November 2022</p>
                 <div class="project-images">
                     <figure class="project-figure">
                         <img src="images/2DOF.JPG" class="project-image lazy" data-src="images/2DOF.JPG" alt="2 DOF Crawler 1">
