--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
                 <h3>B.Sc. in Robotics and Mechatronics Engineering</h3>
                 <p class="education-details">University of Dhaka | 2019 - 2024</p>
                 <p>CGPA: 3.36 / 4.00</p>
-                <p><strong>Relevant Coursework:</strong> Yet to be added</p>
+                <p><strong>Relevant Coursework:</strong> Fundamentals of Mechatronics Engineering, Linear Algebra, Instrumentation and Measurement, Microcontroller and Programmable Logic Controller, Advanced Mechatronics Engineering, Artificial Intelligence, Mathematical Analysis, Intelligent Systems and Robotics, Digital Image Processing and Robot Vision, Digital Signal Processing, and Introduction to Machine Learning</p>
             </div>
             <div class="education-item">
                 <h3>IGCSE Advanced Subsidiary & Advanced Level</h3>
