--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                 <div class="skill-category">
                     <h3>Research Skills</h3>
                     <ul>
-                        <li>Data Analysis</li>
+                        <li>Data and Statistical Analysis</li>
                         <li>Experimental Design</li>
                         <li>Technical Writing</li>
                         <li>Literature Review</li>
