--- a/index.html
+++ b/index.html
@@ -32,10 +32,10 @@
         </nav>
     </header>
 
-    <button id="theme-toggle" class="theme-toggle">
+    <!-- <button id="theme-toggle" class="theme-toggle">
         <i class="fas fa-sun"></i>
         <i class="fas fa-moon"></i>
-    </button>
+    </button> -->
 
     <main>
         <section id="home" class="section">
