--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
                 <p class="publication-venue">10th International Conference for Robotics and Artificial Intelligence (ICRAI), 2024</p>
                 <p class="publication-status">Status: <span class="status-badge">Accepted for Presentation</span></p>
                 <p class="publication-description">I contributed as a joint first author to this work that involved having an NAO robot serving as a Japanese language tutor. This project utilizes double control groups of human tutors and mobile language learning applications to demonstrate the effectiveness of the NAO robot as a language tutor against traditional methods.</p>
-                <a href="#" class="publication-link">Read More</a>
+                <!-- <a href="#" class="publication-link">Read More</a> -->
             </div>
         </section>
 
