--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
                 <p class="experience-details">University of Dhaka | December 2023 - Present</p>
                 <p>Project: "Ma (Mother) Mental Health: Artificial Intelligence-Enabled Detection of Perinatal Depression"</p>
                 <ul>
-                    <li>Conducted data collection sessions with subjects from multiple institutions, including individuals diagnosed with Major Depressive Disorder (MDD) and postnatal/perinatal mothers.</li>
+                    <li>Efficiently conducted data collection sessions with subjects from multiple institutions, ranging from individuals diagnosed with Major Depressive Disorder (MDD) to perinatal mothers diagnosed with maternal depression, ensuring high standards.</li>
                     <li>Managed demographic data and multimodal data (video, audio, and eye tracking) of subjects.</li>
                     <li>Curated a comprehensive dataset for AI-based analysis of perinatal depression.</li>
                     <li>Collaborated with interdisciplinary teams to ensure data integrity and research compliance.</li>
