--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
                     <li>Implemented an XGBoost-based classification method for independent control actions.</li>
                     <li>Developed a web-based dashboard for real-time monitoring with data visualizations and live video feed.</li>
                     <li>Project fully funded by the ICT Division under the ICT Innovation Fund.</li>
-                    <li>Currently under the first round of reviews at the IEEE Journal of Internet of Things (IoT-J).</li>
+                    <li>Currently under the first round of reviews at Computers and Electronics in Agriculture.</li>
                 </ul>
                 <p><strong>Relevance to Graduate Studies:</strong> This project demonstrates my ability to design and implement complex IoT systems, integrate multiple sensors and actuators, and apply machine learning techniques to real-world problems in agriculture and automation.</p>
             </div>
