--- a/index.html
+++ b/index.html
@@ -280,8 +280,11 @@
             
             <h2>Professional Background</h2>
             <p>As a recent graduate in Robotics and Mechatronics Engineering from the University of Dhaka, I have developed a strong foundation in automated and industrial systems. My academic journey has been complemented by practical experience in IoT-based systems, sensor integration, and machine learning applications in robotics.</p>
+             
+            <img src="images/TXST.jpg" alt="Texas State University" style="display: block; margin: 1rem auto; width: 100%; max-width: 400px; height: auto; border-radius: 8px;">
+<p style="text-align: center; margin: 0.5rem 0; font-style: italic; color: #666;">Texas State University Campus</p>
 
-            <p>I'm currently a Doctoral Student at Texas State University under the supervision of Dr. Tsz-Chiu Au, and I'm also a Doctoral Instructional Assistant for the CS 2308 (Fundamentals of Computer Science II) course under Dr. Jill M. Seaman for Fall 2025, where I help students understand fundamental computer science concepts while continuing to develop my own research interests.</p>
+            <p>I'm currently a Doctoral Student in the Department of Computer Science at Texas State University under the supervision of Dr. Tsz-Chiu Au, and I'm also a Doctoral Instructional Assistant for the CS 2308 (Fundamentals of Computer Science II) course under Dr. Jill M. Seaman for Fall 2025, where I help students understand fundamental computer science concepts while continuing to develop my own research interests.</p>
 
             <h2>Research Philosophy</h2>
             <p>My research focuses on the intersection of deep learning and robotics, specifically targeting improvements in sensing capabilities and autonomous navigation. I believe that the future of robotics lies in creating systems that can not only perceive their environment accurately but also learn and adapt their navigation strategies based on experience.</p>
